syntax = "proto3";

package rivet.backend.pkg.cluster.datacenter_resolve_for_name_id;

import "proto/common.proto";
import "proto/backend/cluster.proto";

message Request {
	rivet.common.Uuid cluster_id = 1;
	repeated string name_ids = 2;
}

message Response {
	message Datacenter {
		rivet.common.Uuid datacenter_id = 1;
		string name_id = 2;
	}

	repeated Datacenter datacenters = 1;
}
