syntax = "proto3";

package rivet.backend.pkg.ds_log.export;

import "legacy/proto/common.proto";
import "legacy/proto/backend/ds/log.proto";

message Request {
	rivet.common.Uuid request_id = 1;
	rivet.common.Uuid server_id = 2;
	string task = 3;
	rivet.backend.ds.log.StreamType stream_type = 4;
}

message Response {
	rivet.common.Uuid request_id = 1;
	rivet.common.Uuid upload_id = 2;
}
